# PULSEE

./: .gitignore  FT_Stephen.py  NumPy_TwoSitesHyperfine_CleanedCode.ipynb  README.md  TODO.md  conda-requirements.txt  conda-requirements.yml  gen_slides.tex  helperNumPy.py  lucas_ft.py  pulsee_check.py  pyproject.toml  qobjevo_compiled_coeff_427652645380.py  requirements.txt  setup.py  test.py
Code/: Hamiltonians.py  Many_Body.py  Nuclear_Spin.py  Operators.py  PULSEE_CHEM_GUI.py  PULSEE_CMP_GUI.py  PULSEE_GUI.py  Quantum_Computing.py  Simulation.py
GUI/: PULSEE_CHEM_GUI.py  PULSEE_CMP_GUI.py  _backend_kivy.py  _backend_kivyagg.py
Tests/: Test_Hamiltonians.py  Test_Many_Body.py  Test_Nuclear_Spin.py  Test_Quantum_Computing.py  Test_Simulation.py
demos/: 4_qubit_systems.ipynb  Gaussian_pulse.ipynb  Pi_half_piulse_simple_Zeeman.ipynb  Pi_half_pulse_simple_Zeeman-Square.ipynb  Pi_half_pulse_simple_Zeeman.ipynb  QuTiP Splitting.ipynb  Quadrupolar_Coupling_Demo_PULSEE_3Solvers.ipynb  Simple_90_pulse.ipynb  Squeezing_helper.py  TwoSitesHyperfinePULSEE_CNOTtutorial.ipynb  TwoSitesHyperfinePULSEEtutorial-Aaa.ipynb  TwoSitesHyperfinePULSEEtutorial0p1Aaa.ipynb  TwoSitesHyperfinePULSEEtutorial0p5Aaa.ipynb  can_test.py  correlated_simulations.ipynb  evolver_tests.ipynb  gaussian_pulse_demo.ipynb  multiprocessing_test.py  pulsee_scratch.ipynb  quadrupolar_coupling_demo.ipynb  quantum_computing_demo.ipynb  quantum_computing_demo.py  qubit-dynamics.ipynb  qutip_integration_demo.ipynb  qutip_integration_demo.py  qutip_only_test.ipynb  qutip_sim_test.ipynb  qutip_test.py  readme_demo.ipynb  sim_vesna.py  sim_vesna_nb.ipynb  sim_vesna_nb_quad.ipynb  simple_90_pulse_demo.ipynb  slides.tex
legacy/: config.json  correlated_simulations.ipynb  graveyard.py  quantum_computing_demo.ipynb
pulsee/: hamiltonians.py  nuclear_spin.py  plot.py  (+3 more)
pulsee.egg-info/: SOURCES.txt  top_level.txt
(+445 files in other folders)
