[tool.poetry]
name = "pulsee"
version = "0.1.4"
description = "Program for the Simulation of Nuclear Spin Ensemble Evolution"
authors = ["Jiwoo Seo <lemon6927@gmail.com>, Alan Bidart <alanbidart@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
scipy = "1.11.3"
cython = "<3"
qutip = "<5"
ipykernel = "*"
notebook = "*"
matplotlib = ">=1.2.1"
numpy = ">=1.16"
tqdm = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
