[tool.poetry]
name = "pulsee"
version = "0.1.4"
description = "Program for the Simulation of Nuclear Spin Ensemble Evolution"
authors = ["Jiwoo Seo <lemon6927@gmail.com>, Alan Bidart <alanbidart@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = ">=1.22, <2.0"
scipy = ">=1.8"
matplotlib = ">=1.2.1"
cython = ">=0.29.20"
setuptools = ">=0.29.20"
filelock = ">=0.29.20"
tqdm = "*"
qutip = "^5"
notebook = "*"
pandas = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
